2006-03-21  Edward Hervey  <edward@fluendo.com>

	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_dispose):
	* gst/playback/gstplaybin.c: (handoff):
	* gst/playback/gststreamselector.c:
	(gst_stream_selector_set_property):
	gcc 4.1 unreferenced pointer fixes.
	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_put):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put):
	gst_buffer_ref() now takes a GstBuffer*.

2006-03-20  Julien MOUTTE  <julien@moutte.net>

	* sys/xvimage/xvimagesink.c:
	(gst_xvimagesink_get_format_from_caps): Fix a memleak reported
	by Jan Schmidt.

2006-03-19  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/typefind/gsttypefindfunctions.c: (id3v2_type_find),
	(id3v1_type_find), (apetag_type_find), (plugin_init):
	  Can't do tag preferences via probability, as tags would then
	  lose against types that are recognised with MAXIMUM probability
	  (like .wav); so let all tag typefinders return MAXIMUM themselves
	  and order them via the rank. Split ID3v1 and ID3v2 typefinders so
	  that we can prefer APE to ID3v1 (fixes #335028).
	  
2006-03-17  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_change_state):
	* gst-libs/gst/audio/gstringbuffer.c: (wait_segment),
	(gst_ring_buffer_may_start):
	* gst-libs/gst/audio/gstringbuffer.h:
	Only start playback if we are playing.
	should fix #330748.

2006-03-17  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/alsa/gstalsasink.c: (gst_alsasink_getcaps):
	* win32/common/config.h:
	  Revert accidental commits to these files.

2006-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Michal Benes  <michal dot benes at xeris dot cz>

	* tests/Makefile.am:
	  Don't try to build tests in tests/icles if we
	  don't have X (#323852)

2006-03-16  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/gstid3tag.c:
	  Add TXXX frame identifiers for replaygain stuff as used
	  by some taggers (see #323721).
