@@ -1,3 +1,9 @@
+2006-03-21  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* ext/ogg/gstoggparse.c: (gst_ogg_parse_find_stream),
+	(gst_ogg_parse_chain):
+	  Fix very inefficient usage of linked lists (#335365).
+
 2006-03-21  Edward Hervey  <edward@fluendo.com>
 
 	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_dispose):
